# robo-minesweeper

./: .gitignore  LICENSE  README  README.md  robominer.cabal
scripts/: winrate.sh  winrates.sh
src/: Algorithm.hs  Board.hs  Common.hs  Game.hs  Main.hs
src/Algorithm/: Test.hs
