cabal-version: >= 1.10
name: robominer 
synopsis:
  Algorithm that plays Minesweeper
version: 0.0.1
build-type: Simple
license-file: LICENSE
author: Petr Gladkikh
maintainer: PetrGlad@gmail.com

executable robominer
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded -rtsopts
  build-depends:
    base,
    random,
    MonadRandom,
    ansi-terminal,
    multimap,
    multiset,
    containers,
    parallel,
-- https://hackage.haskell.org/package/GHood
-- https://hackage.haskell.org/package/hood-0.2.1/docs/Debug-Hood-Observe.html
-- https://hackage.haskell.org/package/GHood
--     hood
--    text
    QuickCheck
-- https://hackage.haskell.org/package/HTF-0.13.0.0/docs/Test-Framework-Tutorial.html



